force-app/main/default/objects/Plan_Year__c/Plan_Year__c.object-meta.xml
<CustomObject>
    <description>Fiscal Year Container for RevenueTrust. Groups plan configurations, quotas, and incentive structures under a single year boundary.</description>
    <label>Plan Year</label>
    <nameField>
        <label>Plan Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>