force-app/main/default/objects/Plan_Year__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the plan year this record was cloned from</description>
    <label>Cloned From</label>
    <referenceTo>Plan_Year__c</referenceTo>
    <relationshipLabel>Cloned Plan Years</relationshipLabel>
    <relationshipName>Cloned_Plan_Years</relationshipName>
    <type>Lookup</type>
</CustomField>