force-app/main/default/objects/Plan_Year__c/fields/Config_Reference__c.field-meta.xml
<CustomField>
    <fullName>Config_Reference__c</fullName>
    <!-- Temporary placeholder - will become Lookup to Incentive_Configuration__c after that object is deployed -->
    <description>Temporary - will become Lookup to Incentive_Configuration__c</description>
    <label>Configuration Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>