force-app/main/default/objects/Plan_Year__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last day of the plan year</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>