force-app/main/default/objects/Plan_Year__c/fields/Is_Current__c.field-meta.xml
<CustomField>
    <fullName>Is_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is the currently active plan year</description>
    <label>Is Current</label>
    <type>Checkbox</type>
</CustomField>